--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.7",
     "@types/mongoose": "^5.7.32",
     "@types/node": "^14.0.26",
+    "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
